--- a/zxc.css
+++ b/zxc.css
@@ -43,7 +43,7 @@ html{
 }
 
 p{ 
-    color: rgb(85,85,85)
+    color: rgb(85,85,85);
 }
 
 /* TRANSITION */
@@ -53,20 +53,122 @@ a,
     transition: all 300ml ease;
 }
 
+/* DESCTOP NAV */
+
 nav,
 .nav-list{
-    display: flex;
+  display: flex;
 }
 
 nav {
-    justify-content: space-around;
+    justify-content: space-around; 
     align-items: center;
     height: 17vh;
+    width: 100%;
 }
 
-.nav-list{
+.nav-list {
     gap: 2rem;
     list-style: none;
     font-size: 1.5rem;
-    
+}
+
+a {
+  color: black;
+  text-decoration: none;
+  text-decoration-color: white;
+}
+
+a:hover{
+  color: grey;
+  text-decoration: underline;
+  text-underline-offset: 1rem;
+  text-decoration-color: lightslategray ;
+}
+
+.logo{
+  font-size: 3rem;
+
+}
+
+.logo:hover{
+  cursor: default;
+}
+
+/* HAMBURGER MENIU */
+
+#hamburgMenu{
+  display: none;
+}
+
+.hamburger-menu {
+  position: relative;
+  display: inline-block;
+}
+
+.hamburger-icon{
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  height: 24px;
+  width: 30px;
+  cursor: pointer;
+}
+
+.hamburger-icon span{
+  width: 100%;
+  height:1px;
+  background-color: black;
+  transition: all 0.3 ease-in-out;
+
+}
+
+.menu-links {
+  position: absolut;
+  top: 100%;
+  right: 0;
+  background-color: white;
+  width: fit-content;
+  max-height: 0;
+  overflow: hidden;
+  transition: all 0.3 ease-in-out;
+}
+
+
+.menu-links a{
+  display: block;
+  padding: 10px;
+  text-align: center;
+  font-size: 1.5rem;
+  color: black;
+  text-decoration: none;
+  transition: all 0.3 ease-in-out;
+}
+
+.menu-links li{
+  list-style: none;
+}
+
+.menu-links.open{
+  max-height: 300px;
+}
+
+.hamburger-icon span:first-child{
+  transform: rotate(45deg) translate(10px, 5px);
+}
+.hamburger-icon span:nth-child(2){
+  opacity: 1;
+}
+.hamburger-icon span:last-child{
+  transform: rotate(-45deg) translate(10px, -5px);
+}
+
+.hamburger-icon span:first-child{
+  transform: none;
+}
+.hamburger-icon span:first-child{
+  opacity: 1;
+}
+.hamburger-icon span:first-child{
+  transform: none;
 }
